src/index.css
import

* {
  font-family: Lucida Bright,Georgia,serif;
}

body {
  font-family:'Courier New', Courier, monospace;
  font-weight:"300";
  margin: 0;
  height: 57.1875rem;
  width: 100vw;
  background: linear-gradient(0deg, rgba(224,155,72,0.850577731092437) 0%, rgba(255,239,205,1) 100%); 
  background-color:#e6ae69;
}

/*navbar css*/
header {
  font-family: Lucida Bright,Georgia,serif;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 6rem;
  width: 100vw;
	padding: 0 2rem;
  padding-bottom: 2rem;
  position: fixed;
  align-self: center;
}

nav {
  justify-content: center;
  align-items: center;
  font-weight: 700;
}

nav a {
	margin: 0 1rem;
	color: var(--textColor);
	text-decoration: none;
  font-size: 2rem;
  padding-left: 4.3rem;
  padding-right: 4.3rem;
  padding-top: 2rem;
}

nav a:hover {
	font-size: 2rem;
  transition: 2s;
}

header .nav-btn {
	padding: 5px;
	cursor: pointer;
	background: transparent;
	border: none;
	outline: none;
	color: var(--textColor);
	visibility: hidden;
	opacity: 0;
	font-size: 1.8rem;
}

header div,
nav {
	display: flex;
	align-items: center;
}

#logo-nav:hover {
  height: 8.5rem;
  transition: 0.5s;
}
#logo-nav {
  padding: 0;
  margin-top: 0;
  width: 6.6rem;
  height: 7.2rem;
  background-color:#cd8d31;
  border-bottom-left-radius: 3.125rem;
  border-bottom-right-radius: 3.125rem;
  transition: 0.5s;
}

@media only screen and (max-width: 1024px) {
	header .nav-btn {
		visibility: visible;
		opacity: 1;
	}

	header nav {
		position: fixed;
		top: -100vh;
		left: 0;
		height: 100%;
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		gap: 1.5rem;
		background-color: var(--mainColor);
		transition: 1s;
	}

	header .responsive_nav {
		transform: translateY(100vh);
	}

	nav .nav-close-btn {
		position: absolute;
		top: 2rem;
		right: 2rem;
	}

	nav a {
		font-size: 1.5rem;
	}
  #logo-nav {
   display: none;
  }
  
}

/*Starts inicio css*/

#inicio {
  font-family: Lucida Bright,Georgia,serif;
  margin-top: 10rem;
  margin: 0;
  width: 100vw;
  height: 90vh;
  padding-top: 5rem;
}

#roundInicio {
  background-color: #a68e7449;
  border-radius: 50rem 50rem 40rem 40rem;
  height: 35rem;
  width: 40rem;
  transition: 0.5s;
  box-shadow: 4px 10px 56px 1px #a68e7449;
}

#roundInicio:hover {
  transition: 0.5s;
  box-shadow:10px 10px 71px 62px  #a68e7449;
}

#col1 {
  height: 40rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  transform: translateX(22rem);
  padding-bottom: 10rem;
}

#col2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  transform: translate(5rem,4rem);
  padding-bottom: 10rem;
}

#coffeeImg {
  transform: translate(2rem,-3rem);
  width: 100%;
  max-width: 368px;
  min-width: 10rem;
  height: auto;
  margin-left: 7rem;
}

#granosImg {
  position: absolute;
  height: 16rem;
  width: 33.25rem;
  transform: translate(3rem, -12rem); 
}

#txtInicio {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-top: 7rem;
  margin-bottom: 1rem;
}

.pInicio {
  font-size: 1.3rem;
}

#butInicio {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.btnInicio {
  width: 40%;
  border: none;
  margin-top: 0.9375rem;
  border-radius: 3.125rem;
  padding: 0.125;
  height: 2.5rem;
  background-color: #E09132;
  font-weight: bold;
}

#btn2 {
  background-color: #424530;
}

@media only screen and (max-width: 1560px) {
  #col1 {
    height: 40rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transform: translateX(11.5rem);
  }
}

@media only screen and (max-width: 1140px) {
  #col1 {
    height: 40rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transform: translateX(6rem);
  }
}

@media only screen and (max-width: 720px) {
  #col2 {
    display: none;
  }
  #coffeeImg {
    display: none;
  }
  #granosImg {
   display: none;
  }
  #col1{
    width: 60%;
    justify-content: flex-start;
    padding: 0;
    transform: translateX(5rem);
  }
  #roundInicio {
    background-color: transparent;
    border-radius: 50rem 50rem 40rem 40rem;
    height: 35rem;
    width: 40rem;
    transition: 0.5s;
    box-shadow: none;
  }
}

@media only screen and (max-width: 575px) {
  #inicio{
    width: 100%;
    justify-content: center;
    align-items: center;
  }
  #col2 {
    display: none;
  }
  #coffeeImg {
    display: none;
  }
  #granosImg {
   display: none;
  }
  #col1 {
    width: 100vw;
    justify-content: center;
    align-items: center;
    padding: 0;
  }
}

/*starts the arrow css*/
#arrow {width: 100%; display: flex; flex-direction: row; justify-content: center;  transition: 0.5s; background-color:#e6ae69; padding-top: 2rem;}

/*starts the Historia css*/

#historia {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color:#e6ae69;
  width: 100vw;
  padding-bottom: 15rem;
}

#card {
  position: static;
  margin-top: 6rem;
  display: flex;
  flex-direction: row;
  background-color: #FEEBC8;
  box-shadow: 0.125rem 0.3125rem 0.625rem #888888c2;
  width: 56.75rem;
  height: 35.4375rem;
}

#tittleDiv {
  padding-top: 3.5rem;
  padding-left: 3.5rem;
  width: 50%;
  font-family: Lucida Bright,Georgia,serif;
}

#txtHistoria {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-right: 4rem;
  padding-left: 4rem;
  width: 40%;
  text-align: center;
  font-family: Lucida Bright,Georgia,serif;
}

.historiaP {
  padding: 3rem;
 width: 370px;
 height: 292px;
}

#airpress {
  position: absolute;
  width: 30.9375rem;
  transform: translate(-18rem, 8.5rem);
}

#block {
  position: absolute;
  width: 15rem;
  height: 9.0625rem;
  transform: translate(20rem, -12rem);
}

#blockImg {
  width: 17.8125rem;
  height: 9.0625rem;
}
/* ... */

